perf: correção do exercicio 2

--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -12,14 +12,12 @@
       <h1>TS News</h1>
       
     <nav>
-      <ul>
-        <li><a href="">home</a></li>
-        <li><a href="">politica</a></li>
-        <li><a href="">esporte</a></li>
-        <li><a href="">cultura</a></li>
-      </ul>
+      <a href="">Home</a>
+      <a href="">Politica</a>
+      <a href="">Esporte</a>
+      <a href="">Cultura</a>
     </nav>
-    
+
     </header>
 
     <main>
