--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -3,40 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="essa é uma pagina de noticias" />
+    <meta name="description" content="essa é uma pagina de noticias da taylor swift" />
     <link rel="stylesheet" href="noticiasStyle.css" />
-    <title>noticia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
+
+    <title>Speak News</title>
   </head>
   <body>
-    <header>
-      <h1>TS News</h1>
-      
-    <nav>
-      <a href="">Home</a>
-      <a href="">Politica</a>
-      <a href="">Esporte</a>
-      <a href="">Cultura</a>
+    <header class="titulo">
+      <h1>Speak News</h1>
+      <nav>
+      <a class="menu" href="#">Home</a>
+      <a class="menu" href="#">Politica</a>
+      <a class="menu" href="#">Esporte</a>
+      <a class="menu" href="#">Cultura</a>
     </nav>
-
     </header>
 
     <main>
       <section>
-        <h2>Taylor Swift anuncia compra de todos os seus master perdidos</h2>
-        <p>
-          Após 6 anos Taylor Swift aparece nas redes anunciando a compra de
-          todos os seus 6 primeiros álbuns da carreira que haviam sido perdidos
-          após a venda da gravadora Big Machine Record para Scooter Braun.
-        </p>
-        <img
-          src="assets/taylor-swift-master.jpg"
-          width="350"
-          alt="taylor swift com o vinil de todos os seus albuns perdidos"
-        />
+        <article  class="noticia">
+            <img 
+            src="assets/taylor-swift-master.png"
+            width="300"
+            alt="taylor swift com o vinil de todos os seus albuns perdidos"
+          />
+          <div class="conteudo">
+            <h2>Taylor's Version de verdade! Taylor Swift recupera o que é seu por direito!</h2>
+            <p>
+              Seis anos após a polêmica venda da gravadora Big Machine Records 
+              para o empresário Scooter Braun — que resultou na perda dos direitos sobre seus seis primeiros álbuns —, 
+              Taylor Swift anunciou nas redes sociais a recompra de suas masters. Avaliada em impressionantes 360 milhões de dólares, 
+              a negociação marca um momento histórico na indústria musical e uma vitória simbólica para a artista, que desde então vem 
+              liderando uma campanha pela autonomia criativa e pelos direitos dos músicos sobre suas próprias obras.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section>
+        <article class="noticia">
+           <img
+            src="assets/reputation.png"
+            width="300"
+            alt="photoshoot do reputation"
+          />
+          <div class="conteudo">
+            <h2>Não vai Reputar!</h2>
+            <p>
+              Após o fim da turnê The Eras Tour, era esperado o anúncio da regravação do então aclamado album Reputation, marcado
+              como o maior comeback da história da música, após uma onda de hate iniciado pelo rapper Kanye West e sua esposa na
+              época Kim kardashian em 2016, taylor desapareceu de todos os veículos de mídia, ressurgindo apenas em 2017 com o lançamento
+              do album com uma nova estética e sonoridade que redefiniram sua imagem no cenário musical.Até o momento, a cantora não confirmou 
+              a versão Taylor’s Version do disco, deixando os fãs em suspense e desespero.   
+            </p>
+          </div>
+        </article>
       </section>
     </main>
 
-    <aside>
+    <aside class="anuncio">
       <p>Publicidade: Anucie algo aqui mesmo!</p>
       <img
         src="assets/anuncio.png"
@@ -45,8 +75,9 @@
       />
     </aside>
 
-    <footer>
-      <p>&copy; 2025 TS News - Todos os direitos reservados.</p>
+    <footer class="rodape">
+      <p>&copy; 2025 Speak News - Todos os direitos reservados.</p>
     </footer>
   </body>
+  
 </html>
