css simples da listagem de celulares

--- a/listagemDeCelulares/lista.html
+++ b/listagemDeCelulares/lista.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estiloLista.css">
     <title>Listagem de Celulares</title>
 </head>
 <body>
@@ -13,8 +15,8 @@
     </header>
 
     <main>
-        <table width="100%" border="2">
-            <thead>
+        <table border=2px class="borda">
+            <thead class="cabeçalho">
                 <tr>
                 <th>Marca</th>
                 <th>Modelo</th>
@@ -22,9 +24,9 @@
                 <th>Valor</th>
                 <th>Estado do Celular</th>
                 <th>Demais informações</th>
-            </tr>
+                </tr>
             </thead>
-            <tbody>
+            <tbody class="corpo">
                 <tr>
                     <td>Samsung</td>
                     <td>A56</td>
