subindo alteração do site de noticia com CSS grid

--- a/noticias/noticias.html
+++ b/noticias/noticias.html
@@ -9,75 +9,80 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Lora:ital,wght@0,400;1,400&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
 
     <title>Speak News</title>
   </head>
+
   <body>
-    <header class="titulo">
-      <h1>Speak News</h1>
-      <nav>
-      <a class="menu" href="#">Home</a>
-      <a class="menu" href="#">Politica</a>
-      <a class="menu" href="#">Esporte</a>
-      <a class="menu" href="#">Cultura</a>
-    </nav>
-    </header>
-
-    <main>
-      <section>
-        <article  class="noticia">
-            <img 
-            src="assets/taylor-swift-master.png"
-            width="300"
-            alt="taylor swift com o vinil de todos os seus albuns perdidos"
+    <div class="background"></div>
+    <div class="container">
+       <header class="titulo">
+        <h1>Speak News</h1>
+        <nav>
+          <a class="menus" href="#">Home</a>
+          <a class="menus" href="#">Politica</a>
+          <a class="menus" href="#">Esporte</a>
+          <a class="menus" href="#">Cultura</a>
+        </nav>
+      </header>
+      
+      <aside class="anuncio">
+          <h4>Publicidade: Anucie algo aqui mesmo!</h4>
+          <img
+            src="assets/anuncio.png"
+            width="259"
+            alt="imagem de anúncio publicitário"
           />
-          <div class="conteudo">
-            <h2>Taylor's Version de verdade! Taylor Swift recupera o que é seu por direito!</h2>
-            <p>
-              Seis anos após a polêmica venda da gravadora Big Machine Records 
-              para o empresário Scooter Braun — que resultou na perda dos direitos sobre seus seis primeiros álbuns —, 
-              Taylor Swift anunciou nas redes sociais a recompra de suas masters. Avaliada em impressionantes 360 milhões de dólares, 
-              a negociação marca um momento histórico na indústria musical e uma vitória simbólica para a artista, que desde então vem 
-              liderando uma campanha pela autonomia criativa e pelos direitos dos músicos sobre suas próprias obras.
-            </p>
-          </div>
-        </article>
-      </section>
+      </aside>
 
-      <section>
-        <article class="noticia">
-           <img
-            src="assets/reputation.png"
-            width="300"
-            alt="photoshoot do reputation"
-          />
-          <div class="conteudo">
-            <h2>Não vai Reputar!</h2>
-            <p>
-              Após o fim da turnê The Eras Tour, era esperado o anúncio da regravação do então aclamado album Reputation, marcado
-              como o maior comeback da história da música, após uma onda de hate iniciado pelo rapper Kanye West e sua esposa na
-              época Kim kardashian em 2016, taylor desapareceu de todos os veículos de mídia, ressurgindo apenas em 2017 com o lançamento
-              do album com uma nova estética e sonoridade que redefiniram sua imagem no cenário musical.Até o momento, a cantora não confirmou 
-              a versão Taylor’s Version do disco, deixando os fãs em suspense e desespero.   
-            </p>
-          </div>
-        </article>
-      </section>
-    </main>
+        <main>
+          <section>
+            <article  class="noticia">
+              <img 
+                src="assets/taylor-swift-master.png"
+                width="300"
+                alt="taylor swift com o vinil de todos os seus albuns perdidos"/>
+                <div class="teste">
+                  <h2>Taylor's Version de verdade! Taylor Swift recupera o que é seu 
+                    por direito!</h2>
+                  <p>
+                    Seis anos após a polêmica venda da gravadora Big Machine Records 
+                    para o empresário Scooter Braun — que resultou na perda dos direitos sobre seus seis primeiros álbuns —, 
+                    Taylor Swift anunciou nas redes sociais a recompra de suas masters. Avaliada em impressionantes 360 milhões de dólares, 
+                    a negociação marca um momento histórico na indústria musical e uma vitória simbólica para a artista, que desde então vem 
+                    liderando uma campanha pela autonomia criativa e pelos direitos dos músicos sobre suas próprias obras.
+                  </p>
+                </div>
+            </article>
+          </section>
 
-    <aside class="anuncio">
-      <p>Publicidade: Anucie algo aqui mesmo!</p>
-      <img
-        src="assets/anuncio.png"
-        width="200"
-        alt="imagem de anúncio publicitário"
-      />
-    </aside>
+          <section>
+            <article class="noticia">
+              <img
+                src="assets/reputation.png"
+                width="300"
+                alt="photoshoot do reputation"
+                />
 
-    <footer class="rodape">
-      <p>&copy; 2025 Speak News - Todos os direitos reservados.</p>
-    </footer>
+                <div class="teste">
+                  <h2>Não vai Reputar!</h2>
+                  <p>
+                    Após o fim da turnê The Eras Tour, era esperado o anúncio da regravação do então aclamado album Reputation, marcado
+                    como o maior comeback da história da música, após uma onda de hate iniciado pelo rapper Kanye West e sua esposa na
+                    época Kim kardashian em 2016, taylor desapareceu de todos os veículos de mídia, ressurgindo apenas em 2017 com o lançamento
+                    do album com uma nova estética e sonoridade que redefiniram sua imagem no cenário musical.Até o momento, a cantora não confirmou 
+                    a versão Taylor’s Version do disco, deixando os fãs em suspense e desespero.   
+                  </p>
+                </div>  
+            </article>
+          </section>
+        </main>
+        <footer class="rodape">
+          <p>&copy; 2025 Speak News - Todos os direitos reservados.</p>
+        </footer>
+    </div>
   </body>
-  
 </html>
