subindo alteração do listagem de celulares com CSS flexbox

--- a/listagemDeCelulares/lista.html
+++ b/listagemDeCelulares/lista.html
@@ -8,68 +8,69 @@
     <title>Listagem de Celulares</title>
 </head>
 <body>
-    <header>
-        <h1>
-            Listagem de Celulares
-        </h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>
+                Listagem de Celulares
+            </h1>
+        </header>
 
-    <main>
-        <table border=2px class="borda">
-            <thead class="cabeçalho">
-                <tr>
-                    <th>Marca</th>
-                    <th>Modelo</th>
-                    <th>Cor</th>
-                    <th>Valor</th>
-                    <th>Estado do Celular</th>
-                    <th>Demais informações</th>
-                </tr>
-            </thead>
-            <tbody class="corpo">
-                <tr>
-                    <td>Samsung</td>
-                    <td>A56</td>
-                    <td>preto</td>
-                    <td>R$500,00</td>
-                    <td>novo</td>
-                    <td>veio da china</td>
-                </tr>
-                <tr>
-                    <td>Iphone</td>
-                    <td>11</td>
-                    <td>branco</td>
-                    <td>R$10000,00</td>
-                    <td>usado</td>
-                    <td>veio da china também</td>
-                </tr>
-                <tr>
-                    <td>Motorola</td>
-                    <td>algum modelo deles</td>
-                    <td>só conheço preto</td>
-                    <td>R$10,00</td>
-                    <td>novo</td>
-                    <td>veio da Europa</td>
-                </tr>
-                <tr>
-                    <td>Xiaomi</td>
-                    <td>algum modelo escrito em chinês</td>
-                    <td>vermelho</td>
-                    <td>é grátis</td>
-                    <td>novo</td>
-                    <td>veio da china e Ping lee de 5 anos que fabricou</td>
-                </tr>
-                <tr>
-                    <td>LG</td>
-                    <td>K9</td>
-                    <td>marrom</td>
-                    <td>R$100,00</td>
-                    <td>usado</td>
-                    <td>LG não vende só TV</td>
-                </tr>
-            </tbody>
-        </table>
-    </main>
-
+        <main>
+            <table border=1px class="borda">
+                <thead>
+                    <tr>
+                        <th>Marca</th>
+                        <th>Modelo</th>
+                        <th>Cor</th>
+                        <th>Valor</th>
+                        <th>Estado do Celular</th>
+                        <th>Demais informações</th>
+                    </tr>
+                </thead>
+                <tbody class="corpotb">
+                    <tr>
+                        <td>Samsung</td>
+                        <td>A56</td>
+                        <td>preto</td>
+                        <td>R$2.699,10</td>
+                        <td>novo</td>
+                        <td>made in Korea</td>
+                    </tr>
+                    <tr>
+                        <td>Iphone</td>
+                        <td>11</td>
+                        <td>branco</td>
+                        <td>R$10000,00</td>
+                        <td>usado</td>
+                        <td>made in USA</td>
+                    </tr>
+                    <tr>
+                        <td>Motorola</td>
+                        <td>Moto G34 </td>
+                        <td>Verde-Vegan Leather</td>
+                        <td>R$1919,00</td>
+                        <td>novo</td>
+                        <td>made in USA</td>
+                    </tr>
+                    <tr>
+                        <td>Xiaomi</td>
+                        <td>Redmi Note 11</td>
+                        <td>azul</td>
+                        <td>R$1.455,00</td>
+                        <td>novo</td>
+                        <td>made in China</td>
+                    </tr>
+                    <tr>
+                        <td>LG</td>
+                        <td>K9</td>
+                        <td>bege</td>
+                        <td>R$219,00</td>
+                        <td>usado</td>
+                        <td>made in Korea</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+    </div>
 </body>
 </html>
